Arquivo index.html alterado

--- a/index.html
+++ b/index.html
@@ -4,30 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marco Zero</title>
+    <title>Conheça Recife</title>
 </head>
 <body>
     <header>
         <img src="imagens\Marcozero.jpeg" width="100%" height="30%" title = "Imagem da Praça do Marco Zero." alt = "Imagem da Praça do Marco Zero.">
-        <h1>Marco Zero: Aqui Nasceu Recife</h1>
+        <h1>"Eu vi o mundo...Ele começava no Recife."</h1>
+        <p>A célebre frase que exalta Recife, é do pintor pernambucano Cícero Dias (1903-2003). Artista premiado internacionalmente, tem suas obras espalhadas pelo Brasil e pelo Mundo. Mas afinal, onde nasceu Recife? Vamos descobrir?</p>
+
     </header>
     <main>
-        <h2><i>Praça Rio Branco</i></h2>
+        <h2><i>Marco Zero: Aqui Nasceu Recife</i></h2>
             <p>O Marco Zero no Recife Antigo é um dos pontos turísticos mais importantes para quem deseja conhecer a capital de Pernambuco. Isso porque é um local de importância histórica que conta o nascimento da cidade e possui forte referência cultural.<br></p>
             <img src="imagens\mzfoto antiga.jpg" width="100%" height="30%" title = "Imagem da Praça Rio Branco - Marco Zero em 1940." alt = "Imagem da Praça Rio Branco - Marco Zero em 1940."> 
 
-            <p>Embora seja conhecida pelo seu nome popular – Praça do Marco Zero, na verdade, é um apelido – o local se chama Praça Barão do Rio Branco e está localizada no Bairro do Recife, o Centro Histórico da cidade, que também atende por outra alcunha, mais popular: Recife Antigo. Além de dar o nome oficial à praça, o Barão do Rio Branco também está representado no local por uma estátua em bronze de 2,80m de altura, feita pelo escultor francês Félix Charpentier. O nome de Praça do Marco Zero se popularizou por conta da instalação, em 31 de janeiro de 1938, do Marco Zero de Recife, doado à cidade pelo Automóvel Clube de Pernambuco. A placa redonda posicionada na praça simboliza o centro geográfico de onde partem as medições para todas as estradas de Pernambuco.</p>        
+            <p>Embora seja conhecida pelo seu nome popular – Praça do Marco Zero, na verdade, é um apelido – o local se chama Praça Barão do Rio Branco e está localizada no Bairro do Recife, o Centro Histórico da cidade, que também atende por outra alcunha, mais popular: Recife Antigo. Além de dar o nome oficial à praça, o Barão do Rio Branco também está representado no local por uma estátua em bronze de 2,80m de altura, feita pelo escultor francês Félix Charpentier. O nome de Praça do Marco Zero se popularizou por conta da instalação, em 31 de janeiro de 1938, do pequeno obelisco que foi colocado no meio da Praça em frente à estátua do Barão que foi doado à cidade pelo Automóvel Clube de Pernambuco.</p>        
             <img src="imagens\simbolodomz.jpg"  width="100%" height="60%" title = "Placa de bronze que fica posicionada   no centro do Marco zero" alt = "Placa de bronze que fica posicionada   no centro do Marco zero">
-            <p>O Marco Zero no Recife Antigo é o lugar de referência onde a cidade nasceu e todas as medidas oficiais de
-            distâncias rodoviárias usam como ponto de partida. Seu nome é, na verdade, Praça Rio Branco e fica ao lado
-            do Porto de Pernambuco. Pode-se dizer que ele se situa no centro histórico da cidade, que é mais conhecido como Recife Antigo por ser a parte onde se iniciou o povoamento da capital pernambucana.<br></p>
+            <p>O Marco Zero no Recife Antigo é o lugar de referência onde a cidade nasceu e todas as medidas oficiais de distâncias rodoviárias usam como ponto de partida. Pode-se dizer que ele se situa no centro histórico da cidade por ser a parte onde se iniciou o povoamento da capital pernambucana.<br></p>
             <img src="imagens\mztop.jpg"  width="100%" height="60%" title = "Imagens contendo pessoas posando para foto em frente ao nome da cidade Recife situado no Marco zero"alt = "Imagens contendo pessoas posando para foto em frente ao nome da cidade Recife situado no Marco zero">  
         
-            <p>O Marco Zero fica localizado no Recife Antigo, às margens do porto velho e permite conhecer palacetes históricos, instalações portuárias, bares, restaurantes e espaços culturais. Fazendo desse passeio, programa obrigatório para quem quer garantir lazer com uma boa dose de cultura na capital pernambucana. Confira a seguir as melhores dicas do que fazer no local!</p>
+            <p>O Marco Zero fica localizado git às margens do porto velho e permite conhecer palacetes históricos, instalações portuárias, bares, restaurantes e espaços culturais. Fazendo desse passeio, programa obrigatório para quem quer garantir lazer com uma boa dose de cultura na capital pernambucana. Confira a seguir as melhores dicas do que fazer no local!<br></p>
 
     </main>
-    <footer>
 
+    <footer>
+        
+        <p><i>Para mais informações acesse: https://www2.recife.pe.gov.br/</i></p>
     </footer>
 </body>
 </html>
