Arquivo README.md e index.html alterados

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>O Marco Zero no Recife Antigo é o lugar de referência onde a cidade nasceu e todas as medidas oficiais de distâncias rodoviárias usam como ponto de partida. Pode-se dizer que ele se situa no centro histórico da cidade por ser a parte onde se iniciou o povoamento da capital pernambucana.<br></p>
             <img src="imagens\mztop.jpg"  width="100%" height="60%" title = "Imagens contendo pessoas posando para foto em frente ao nome da cidade Recife situado no Marco zero"alt = "Imagens contendo pessoas posando para foto em frente ao nome da cidade Recife situado no Marco zero">  
         
-            <p>O Marco Zero fica localizado git às margens do porto velho e permite conhecer palacetes históricos, instalações portuárias, bares, restaurantes e espaços culturais. Fazendo desse passeio, programa obrigatório para quem quer garantir lazer com uma boa dose de cultura na capital pernambucana. Confira a seguir as melhores dicas do que fazer no local!<br></p>
+            <p>O Marco Zero fica localizado às margens do porto velho e permite conhecer palacetes históricos, instalações portuárias, bares, restaurantes e espaços culturais. Fazendo desse passeio, programa obrigatório para quem quer garantir lazer com uma boa dose de cultura na capital pernambucana. Confira a seguir as melhores dicas do que fazer no local!<br></p>
 
     </main>
 
