Imagens adicionadas e Arquivos html alterados

--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
     </section>
     
     <section id ="outros pontos turísticos">
-        <h2><strong>Outros pontos turísticos</strong></h2>
-
-        <h3><i>Conheça aqui outros pontos turísticos do Recife Antigo.</i></h3>
+        
+        <h3><i>Clique em <a href ="outrospontosturisticos.html">Outros pontos turísticos</a> e conheça melhor o Recife Antigo.</i></h3>
 
     </section>
     </main>
