--- a/outrospontosturisticos.html
+++ b/outrospontosturisticos.html
@@ -26,8 +26,21 @@
         <h2>Outros pontos turísticos.</h2>
 
         <p>A Praça do Marco Zero, é apenas o ponto inicial para as maravilhas que estão espalhadas pelo Recife Antigo. Além de uma infinidade de bares e restaurantes badaladíssimos, há muitos outros pontos turíscos para explorarmos. Vamos conhecê-los?</p>
-  
- 
+        <h2>Centro Cultural Cais do Sertão</h2>
+
+        <img src ="imagens\CaisdoSertão.jpg" width ="100%" heidht ="60%" alt = "Imagem do salão do Cais do Sertão">
+
+        <p>Construído no local de antigos armazéns do Porto do Recife, o <strong>Cais do Sertão</strong> oferece aos visitantes exposições temporárias e acervo permanente, com referências à cultura sertaneja da região Nordeste, com experiências sensoriais e arquitetura inovadora, em edificação que exprime em seus traços a união do litoral com o sertão.
+        Os horários de funcionamento serão reduzidos: 10h às 16h dias de quinta e sexta e 11h às 17h aos sábados, domingos e feriados.</p>
+
+        <h2>Parque das esculturas de Francisco Brennand</h2>
+            <img src="imagens\parquebrennand.jpg" width = "100%" heidht = "60%" alt="Imagem com esculturas do artista plástico Francisco Brennand">
+
+        <p>O <strong>Parque das Esculturas Francisco Brennand</strong> é um museu de arte a céu aberto localizado na cidade do Recife, capital do estado brasileiro de Pernambuco. Constitui um dos principais feitos do artista plástico pernambucano Francisco Brennand.
+        Idealizado na década de 1990 como parte do projeto “Eu vi o mundo… Ele Começava no Recife” para comemoração dos 500 anos do descobrimento do Brasil, o parque foi inaugurado em 29 de dezembro 2000.</p>
+        <p>Ao total, existem 90 esculturas criadas por Francisco Brennand, sendo a principal obra no complexo a Torre de Cristal, com 32 metros de altura e confeccionada em argila e bronze.</p>
+
+    </section>
     </main>
 
     <footer>
